--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ubuntu-latest, macos-12, windows-2019]
+        platform: [ubuntu-latest]
         python-version: ["3.8", "3.11"]
 
     runs-on: ${{ matrix.platform }}
