--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest]
-        python-version: ["3.8", "3.11"]
+        python-version: ["3.12"]
 
     runs-on: ${{ matrix.platform }}
 
