--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ubuntu-latest]
-        python-version: ["3.7", "3.12", "pypy-3.9"]
+        python-version: ["3.12"]
 
     steps:
     - uses: actions/checkout@v4
